Fix letter spacing for arabic

--- a/themes/homecamp/assets/scss/_banner.scss
+++ b/themes/homecamp/assets/scss/_banner.scss
@@ -10,8 +10,12 @@
     h1 {
       font-size: 100px;
       line-height: 1.2;
-      letter-spacing: -.04em;
-
+      body.rtl & {
+        letter-spacing: 0em;
+      }
+      body.tlr & {
+        letter-spacing: -.04em;
+      }
       @include desktop {
         font-size: 80px;
       }
